Prevent subtitle overflowing on lower width devices.

--- a/source/scss/components/_page-header.scss
+++ b/source/scss/components/_page-header.scss
@@ -13,6 +13,10 @@
 
   @media (max-width: mixins.$medium-breakpoint) {
     height: 50vh;
+
+    .subtitle {
+      flex-direction: column;
+    }
   }
 
   h1 {
